--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Shared/_Layout.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Shared/_Layout.cshtml
@@ -12,12 +12,26 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 @Html.ActionLink("Nomes da História", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            </div>
+            <div class="navbar-right">
+                @if (Session["userID"] == null) { 
+                    @Html.ActionLink("Registar", "Register", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
+                else
+                {
+                    @Html.ActionLink("Sair", "Logout", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
+            </div>
+            <div class="navbar-right">
+                @if (Session["userID"] == null) {
+                     @Html.ActionLink("Entrar", "Login", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
+                else
+                {   
+                    @Html.ActionLink(Session["userID"] + ", Pontuação : " + Session["points"],
+                                    "Details", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }  
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -25,14 +39,6 @@
             </div>
         </div>
     </div>
-    <div style="width: auto; background-color: #728ea7;">
-        @if (Request.IsAuthenticated)
-        {
-            <strong>@Html.Encode(User.Identity.Name)</strong>
-          //  @Html.ActionLink("Sign Out", "Logout", "User")
-        }
-    </div>
-
     <div class="container body-content">
         @RenderBody()
         <hr/>
