--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
@@ -23,6 +23,9 @@ else
         <p>introduçao a cenas ficava fixed!</p>
 
         <h4>Vamos Aprender?</h4>
+        <h2>imagem</h2>
+        <div><img src="~/Assets/sprites/ldc/camoes_notTalking.jpg" alt="Camões avatar"></div>
+
        
             @Html.ActionLink("Entrar", "Login", "Home", new { area = "" }, new { @class = "btn btn-default text-primary" })
        
