--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
@@ -36,5 +36,13 @@ else
 
             @Html.ActionLink("Registar", "Register", "Home", new { area = "" }, new { @class = "btn btn-default text-primary" })
         </div>
+        <div>
+            <video width="640" height="480"  controls >
+                <source src="~/Assets/help/videoRegistar.mp4" type="video/mp4">
+                <source src="~/Assets/help/videoRegistar.ogv" type="video/ogg">
+                <source src="~/Assets/help/videoRegistar.webm" type="video/webm">
+                O teu browser não suporta ficheiros de video
+            </video>
+        </div>
     </body>
 }
