imagens a ficar nice
:warning: -> temos que mudar o enconding dos ficheiros se não os
caracteres batem mal na pagina

--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
@@ -29,7 +29,7 @@
 
     <div class="anyClass">
        @{
-            var arr = Html.Action("GetImages", new { multimedia = Model.Multimedia, Apid = Model.cod });
+            var arr = Html.Action("GetImages", new { multimedia = Model.Multimedia.ToList(), Apid = Model.cod });
        } 
             <ul>
                @arr
