--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
@@ -1,6 +1,33 @@
 ﻿@model NomesdaHistoriaApp.Models.Apresentacoes
 
 
+<script>
+
+    $('.carousel-sync').on('click', '.carousel-control[data-slide]', function (ev) {
+        ev.preventDefault();
+        $('.carousel-sync').carousel($(this).data('slide'));
+    });
+    $('.carousel-sync').on('mouseover', function (ev) {
+        ev.preventDefault();
+        $('.carousel-sync').carousel('pause');
+    });
+
+
+    $('#myCarousel').bind('slid.bs.carousel', function (e) {
+
+        var $this = $(this);
+
+        $this.children('.carousel-control').show();
+
+        if ($('.carousel-inner .item:last').hasClass('active')) {
+            $('#myCarousel').carousel('pause');
+            $this.children('.right.carousel-control').hide();
+        } else if ($('.carousel-inner .item:first').hasClass('active')) {
+            $this.children('.left.carousel-control').hide();
+        }
+    });
+</script>
+
 
 @if (Model.tipo == "video")
 {
@@ -21,19 +48,94 @@
 
 }
 
-@if (Model.tipo == "imagem") {
+@if (Model.tipo == "imagem")
+{
+    <div id="myCarousel" class="carousel slide carousel-sync">
+        <div class="carousel-inner">
 
-   
-          
-    
-
-    <div class="anyClass">
-       @{
-            var arr = Html.Action("GetImages", new { multimedia = Model.Multimedia.ToList(), Apid = Model.cod });
-       } 
-            <ul>
-               @arr
-            </ul>
-</div>
-            
+            @{
+    var arr = Html.Action("GetImages", new { multimedia = Model.Multimedia.ToList(), Apid = Model.cod });
+    int i = 0;
             }
+            @foreach (String s in (arr.ToString()).Split('+'))
+            {
+                if (s != null && s != "")
+                {
+                    if (@i == 0)
+                    {
+
+                        <div class="item active">
+                            <img src="@s.Split(';')[0]" alt="" height="400" width="600" />
+                            <p> @s.Split(';')[1] </p>
+                        </div>
+                        i++;
+                    }
+                    else
+                    {
+                        <div class="item">
+                            <img src="@s.Split(';')[0]" alt="" height="400" width="600" />
+                            <p> @s.Split(';')[1] </p>
+                        </div>
+                    }
+                }
+            }
+
+        </div>
+
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        </a>
+    </div>
+
+}
+
+
+
+
+      <!--
+
+        <div class="anyClass">
+           @{/**
+            var arr = Html.Action("GetImages", new { multimedia = Model.Multimedia.ToList(), Apid = Model.cod });
+            }
+            <ul>
+                @foreach (String s in (arr.ToString()).Split('+'))
+               {
+                   if (s != null && s != "") {
+                    <li>
+                        <table>
+                            <tr>
+                                <td>
+                                    <img src="@s.Split(';')[0]" alt="" height="400" width="600" />
+                                    <p> @s.Split(';')[1] </p>
+                                </td>
+                            </tr>
+                        </table>
+                    </li>
+                    }
+               }
+
+            </ul>
+        </div>
+
+
+        <button class="prev"><<</button>
+        <button class="next"><<</button>
+
+        <script type="text/javascript">
+            $(function () {
+                $(".anyClass").CarouselLite({
+                    btnNext: ".next",
+                    btnPrev: ".prev"
+                });
+            });
+
+        </script>
+        *
+        * */
+
+        }
+          -->
