--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
@@ -24,22 +24,27 @@
 
 @if (Model.tipo == "imagem")
 {
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-interval="false" data-ride="carousel">
+
+        @{
+            var arr = Html.Action("GetImages", new { multimedia = Model.Multimedia.ToList(), Apid = Model.cod });
+            int i = 0;
+            int size = arr.ToString().Split('+').Length - 1;
+
+        }
+
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            @for (int k = 1; k < size; k++)
+            {
+                <li data-target="#myCarousel" data-slide-to="@k"></li>
+            }
+        </ol>
+
         <div class="carousel-inner" role="listbox">
 
-            @{
-                    var arr = Html.Action("GetImages", new { multimedia = Model.Multimedia.ToList(), Apid = Model.cod });
-                    int i = 0;
-                    int size = arr.ToString().Split('+').Length-1;
-    
-            }
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                @for (int k = 1; k <= size; k++)
-                { 
-                    <li data-target="#myCarousel" data-slide-to="@k"></li>
-                }
-            </ol>
+           
+            
             @foreach (String s in (arr.ToString()).Split('+'))
             {
                 if (s != null && s != "")
@@ -49,7 +54,7 @@
 
                         <div class="item active">
                             <img src="@s.Split(';')[0]" alt="" height="300" width="500" />
-                            <p> @s.Split(';')[1] </p>
+                            <div class="carousel-text"> @s.Split(';')[1] </div>
                         </div>
                         i++;
                     }
@@ -57,7 +62,7 @@
                     {
                         <div class="item">
                             <img src="@s.Split(';')[0]" alt="" height="300" width="500" />
-                            <p> @s.Split(';')[1] </p>
+                            <div class="carousel-text"> @s.Split(';')[1] </div>
                         </div>
                     }
                 }
@@ -80,7 +85,10 @@
     var $myCarouselControlsLeft = $myCarouselControls.filter('.left');
     var $myCarouselControlsRight = $myCarouselControls.filter('.right');
     var $myCarouselIndicators = $myCarousel.find('.carousel-indicators li');
-    $myCarousel.carousel('pause');
+    $myCarousel.carousel({
+        interval:false
+    });
+    //$myCarousel.carousel('pause');
     $myCarouselControlsLeft.hide();
     var slideCount = $myCarouselIndicators.length;
     $myCarousel.on('slid.bs.carousel', function () {
@@ -91,6 +99,7 @@
         } else if (index == slideCount - 1) { // is last slide
             $myCarouselControlsLeft.show();
             $myCarouselControlsRight.hide();
+     //       $myCarousel.carousel('pause');
         } else { // is not first or last slide
             $myCarouselControls.show();
         }
@@ -108,4 +117,15 @@
     height: 400px;    
     vertical-align : central;
     margin: 20px;
-}</style>
+
+    }
+    .carousel-control.left, .carousel-control.right {
+        background-image : none;
+    }
+
+    .carousel-text {
+        text-align: center;
+        font-family : Rockwell;
+        font-size : 18px;
+    }
+</style>
