--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Shared/_Layout.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
@@ -50,11 +51,10 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr/>
-    </div>
-
     
+      
+                    @RenderBody()
+                   
+      
 </body>
 </html>
