--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Shared/_Layout.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/Css_changers.js"></script>
+   
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -51,10 +53,31 @@
             </div>
         </div>
     </div>
+    @if (Session["userID"] == null)
+    {
+       
+        <script>
+            doBackground();
+        </script>
+        @RenderBody()
+        
+    }
+    else
+    {
+        var s = Session["userAmb"];
+            
+       
+           <script>
+               doBackgroundUser("@s");
+           </script>
+            @RenderBody()
+      
+    }
+
     
       
-                    @RenderBody()
-                   
-      
 </body>
+
+
+
 </html>
