interacao do tutor

--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
@@ -12,9 +12,8 @@
                 <div class="aulas">
                     @Html.Action("_ListEtapas", "Home", "Home/_ListEtapas")
                 </div>
-                <div class="Sala_de_aula">
-                </div>
                 <div class="Avatar">
+                    @Html.Action("MostraTutor", "Personagen", "Personagen/MostraTutor")
                 </div>
             </div>
         </div>
