tutor pronto em principio

--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
@@ -1,23 +1,65 @@
 ﻿@{
     ViewBag.Title = "Nomes da História - tutor virtual";
 }
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            @Html.ActionLink("Nomes da História", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        </div>
+        <div class="navbar-right">
+            @if (Session["userID"] == null)
+            {
+                @Html.ActionLink("Registar", "Register", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            }
+            else
+            {
+                @Html.ActionLink("Sair", "Logout", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            }
+        </div>
+        <div class=" navbar-right">
+            @if (Session["userID"] != null)
+            {
+                @Html.ActionLink("Consultar Ranking", "_ConsultarRanking", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            }
+        </div>
 
-
+        <div class="navbar-right">
+            @if (Session["userID"] == null)
+            {
+                @Html.ActionLink("Entrar", "Login", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            }
+            else
+            {
+                @Html.ActionLink(Session["userID"] + ", Pontuação : " + Session["points"],
+                                    "Details", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            }
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav"></ul>
+        </div>
+    </div>
+</div>
 
 @if (Session["userID"] != null)
 {
-    
-        <div class="body-content">
-            <div class="container">
-                <div class="aulas">
-                    @Html.Action("_ListEtapas", "Home", "Home/_ListEtapas")
-                </div>
-                <div class="Avatar">
-                    @Html.Action("MostraTutor", "Personagen", "Personagen/MostraTutor")
+ 
+        <div class="containerCards sidebar">
+            <div class="card ">
+                @Html.Action("_ListEtapas", "Home", "Home/_ListEtapas")
+            </div>
+        </div>
+
+        <div class="body-contentT">
+
+            <div class="container text-center">
+               
+                <div class="containerCards">
+                    <div class="card tutor">
+                        @Html.Action("MostraTutor", "Personagen", "Personagen/MostraTutor")
+                    </div>
                 </div>
             </div>
         </div>
-    
 }
 else
 {
