--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Content/stylesheet.css
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Content/stylesheet.css
@@ -20,6 +20,10 @@
     margin : auto;
 }
 
+.sidebar {
+    position:fixed;
+    height : 95%;
+}
 video {
     width: 75%;
     height : 75%;   
@@ -33,7 +37,201 @@ video {
     display:inline-block;
 }
 
+body { padding-top: 70px; }
+
 .content {
     height:100%;
     
+}
+.card {
+  display : inline-block;
+  vertical-align:top;
+  min-width :30%;
+  padding:1.5rem;
+  box-shadow:0 1px 2px #aaa;
+  background:white;
+  margin:0 1rem 1rem;
+  border-radius:3px;
+ /* user-select:none;*/
+  animation:fly-in-from-left .5s 1s ease both;
+  transform-origin:top left;
+  height:100%;
+}
+.card:nth-child(even){
+  animation-name:fly-in-from-right;
+  animation-delay:1.1s;
+ transform-origin:top right;
+}
+
+@keyframes fly-in-from-left {
+  from {
+    transform:translateY(15rem) rotate(15deg);
+    opacity:0;
+  }
+}
+
+@keyframes fly-in-from-right {
+  from {
+    transform:translateY(15rem) rotate(-15deg);
+    opacity:0;
+  }
+}
+
+
+
+.body-contentT {
+    margin-left: 30%;
+    display:inline-block;
+   
+}
+
+.containerCards {
+    display : inline-block;
+    vertical-align: central;
+}
+
+.tutor {
+    position: fixed;
+    background : none;
+    border : none;
+    box-shadow:none;
+}
+
+/* unvisited link */
+.classLink:link {
+    color: #000000;
+}
+
+/* visited link */
+.classLink:visited {
+     color: #000000;
+}
+
+/* mouse over link */
+.classLink:hover {
+     color: #000000;
+     text-decoration:none;
+}
+
+/* selected link */
+.classLink:active {
+     color: #000000;
+}
+
+.classCard:hover {
+    color: #0bf3c9;
+}
+
+.ListAulas {
+    list-style: none;
+    text-align : left;
+}
+
+@media (max-width:1000px){
+    .sidebar {
+   
+   
+}
+video {
+    width: 75%;
+    height : 75%;   
+}
+
+.leftAvatar {
+    
+}
+
+.rightAvatar {
+    
+}
+
+body { padding-top: 70px; }
+
+.content {
+    height:100%;
+    
+}
+.card {
+  display : inline-block;
+  vertical-align:top;
+  min-width :30%;
+  padding:1.5rem;
+  box-shadow:0 1px 2px #aaa;
+  background:white;
+  margin:0 1rem 1rem;
+  border-radius:3px;
+ /* user-select:none;*/
+  animation:fly-in-from-left .5s 1s ease both;
+  transform-origin:top left;
+  height:100%;
+}
+.card:nth-child(even){
+  animation-name:fly-in-from-right;
+  animation-delay:1.1s;
+ transform-origin:top right;
+}
+
+@keyframes fly-in-from-left {
+  from {
+    transform:translateY(15rem) rotate(15deg);
+    opacity:0;
+  }
+}
+
+@keyframes fly-in-from-right {
+  from {
+    transform:translateY(15rem) rotate(-15deg);
+    opacity:0;
+  }
+}
+
+
+
+.body-contentT {
+   
+  
+   
+}
+
+.containerCards {
+    display : inline-block;
+    vertical-align: central;
+}
+
+.tutor {
+   
+    background : none;
+    border : none;
+    box-shadow:none;
+}
+
+/* unvisited link */
+.classLink:link {
+    color: #000000;
+}
+
+/* visited link */
+.classLink:visited {
+     color: #000000;
+}
+
+/* mouse over link */
+.classLink:hover {
+     color: #000000;
+     text-decoration:none;
+}
+
+/* selected link */
+.classLink:active {
+     color: #000000;
+}
+
+.classCard:hover {
+    color: #0bf3c9;
+}
+
+.ListAulas {
+    list-style: none;
+    text-align : left;
+}
 }
