--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Personagen/MostraTutor.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Personagen/MostraTutor.cshtml
@@ -19,7 +19,7 @@
             // run the effect
             $("#effect").toggle(selectedEffect, options, 500);
         };
-      
+
 
         // set effect from select menu value
         $("#mytutor").click(function () {
@@ -34,14 +34,22 @@
         $("#menu").menu();
     });
 
-    function help(msg,top) {
+    function help(msg,cod,path) {
         $("#talkingBalloon").empty();
         $("#talkingBalloon").append("<p>"+msg+"</p>");
         $("#talkingBalloon").show();
-        $("#"+top).get(0).play();
+        $("#" + cod).append('<source src="'+path+'">');
+        $("#"+cod).get(0).play();
 
     };
+
     
+    function onEnd() {
+        $("#talkingBalloon").hide();
+        $("#effect").toggle("clip", {}, 500);
+        
+        //alert("The audio has ended");
+    };
 </script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <div id="tutor-container">
@@ -58,10 +66,8 @@
                             {
                                 i++;
                                 <li>
-                                   <div onclick="help('@aj.ajuda','@i')">@aj.topico</div>
-                                    <audio id="@i" hidden>
-                                        <source src="~/@aj.audio">
-                                    </audio>
+                                   <div onclick="help('@aj.ajuda','@aj.cod','@aj.audio')">@aj.topico</div>
+                                    <audio id="@aj.cod" onended="onEnd()" hidden></audio>
                                 </li>
                             }
                         </ul>
